--- a/cluster/apps/game-system/factorio-k2/kustomization.yaml
+++ b/cluster/apps/game-system/factorio-k2/kustomization.yaml
@@ -2,5 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - factorio
-  - factorio-k2
+  - helm-release.yaml
+  - secret.sops.yaml
+  - persistent-volume-claim.yaml
