--- a/cluster/apps/game-system/factorio-k2/secret.sops.yaml
+++ b/cluster/apps/game-system/factorio-k2/secret.sops.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: factorio-secrets
+    name: factorio-k2-secrets
     namespace: game-system
 stringData:
     GAME_PASSWORD: ENC[AES256_GCM,data:CYOhfBVcKG36CKGv,iv:EFIbt1804H+tBILpGRa8rENdzSh86N8UOl/nhXPe/mk=,tag:hJzOqnTBTAdyELVLJ3jvgw==,type:str]
@@ -23,8 +23,8 @@ sops:
             bW1RVjN4d0hxM0poci8wQkNEOGhkdXcK4ASsRfD9dBRhOOhk/shVzHojccjPZAGQ
             eJz8VtEDCwKlJhuSc7QWjmgw3253/hc6BeOkZ0jkLuDvA399ftYsMw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-16T05:56:41Z"
-    mac: ENC[AES256_GCM,data:9hahb0HJoWduU9hOalt4cVKzhChRJGcrZOjZTfu7vsgedm0iLh6B1DqJKmXNpMdA66zNNS5GVNIgvTFv+YL3SuiguQbCb0Gxmh34quhax4cy6JCSiiIvOpHIKxDbUHs3Iq9cOJwLhgx3PLOI8FzU9xRTgMIl7sMzIdX3bQDUCjA=,iv:/98UqEJYTsKQO/7BziyxZt6803KCF6tMnommsfYobMo=,tag:y2OlFc8RHuG7bouGRyzxwg==,type:str]
+    lastmodified: "2022-05-18T05:11:36Z"
+    mac: ENC[AES256_GCM,data:f9fI/+utpJPwCSYh8nblwd8wRE/72J+eF4XBYSCxtR9uxsVAbLwFrLXs2smw8TNC5AT6LQJRNg54VnJjqDmglIxeeLYKHtfAjnHpvF9rrEcerd/cWbcJnwoa+4xHOLRvKPcqyPr2TyvZYQzI09UXtf1NxtgUEWFx92WcFSvw9FU=,iv:M4WV5+GFoWNb1cTRbO6B5SzcHak9CjsmgQz9UKGYfjo=,tag:+lEX9abcnPixVmrFGFrdDg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.2
