--- a/cluster/apps/home/syncthing/helm-release.yaml
+++ b/cluster/apps/home/syncthing/helm-release.yaml
@@ -62,7 +62,7 @@ spec:
           # external-dns/is-public: "true"
           kubernetes.io/ingress.class: traefik
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
-          traefik.ingress.kubernetes.io/router.middlewares: networking-internal@kubernetescrd
+          traefik.ingress.kubernetes.io/router.middlewares: networking-external-auth@kubernetescrd
         hosts:
           - host: &host sync.${CLUSTER_DOMAIN}
             paths:
