set resource limits

--- a/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -20,7 +20,13 @@ spec:
     image:
       repository: grafana/grafana
       tag: 8.5.2
-
+    resources:
+      requests:
+        cpu: 11m
+        memory: 127M
+      limits:
+        cpu: 11m
+        memory: 127M
     deploymentStrategy:
       type: Recreate
     podAnnotations:
