--- a/cluster/apps/auth-system/authentik/helm-release.yaml
+++ b/cluster/apps/auth-system/authentik/helm-release.yaml
@@ -25,12 +25,20 @@ spec:
       repository: ghcr.io/goauthentik/server
       tag: 2022.4.1
     resources:
-      requests:
-        cpu: 163m
-        memory: 629M
-      limits:
-        cpu: 163m
-        memory: 629M
+      server:
+        requests:
+          cpu: 163m
+          memory: 629M
+        limits:
+          cpu: 163m
+          memory: 629M
+      worker:
+        requests:
+          cpu: 11m
+          memory: 512M
+        limits:
+          cpu: 11m
+          memory: 512M
 
     ingress:
       enabled: true
