Revert "modify resources"
This reverts commit 2709b87570d60e23b2c0003ebefa167a6e0c5218.

--- a/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -136,6 +136,7 @@ spec:
             cpu: 11m
             memory: 79M
           limits:
+            cpu: 11m
             memory: 79M
       dashboards:
         enabled: true
@@ -148,6 +149,7 @@ spec:
             cpu: 11m
             memory: 94M
           limits:
+            cpu: 11m
             memory: 94M
     datasources:
       datasources.yaml:
