--- a/cluster/apps/auth-system/authentik/helm-release.yaml
+++ b/cluster/apps/auth-system/authentik/helm-release.yaml
@@ -30,12 +30,14 @@ spec:
           cpu: 163m
           memory: 629M
         limits:
+          cpu: 163m
           memory: 629M
       worker:
         requests:
           cpu: 11m
           memory: 512M
         limits:
+          cpu: 11m
           memory: 512M
 
     ingress:
