--- a/cluster/apps/monitoring/loki/helm-release.yaml
+++ b/cluster/apps/monitoring/loki/helm-release.yaml
@@ -31,6 +31,7 @@ spec:
         cpu: 35m
         memory: 298M
       limits:
+        cpu: 35m
         memory: 298M
     config:
       limits_config:
