Revert "modify resources"
This reverts commit c5383541e3a71c8f116e548420398b373e58bf18.

--- a/cluster/apps/monitoring/goldilocks/helm-release.yaml
+++ b/cluster/apps/monitoring/goldilocks/helm-release.yaml
@@ -23,6 +23,7 @@ spec:
           cpu: 35m
           memory: 64M
         limits:
+          cpu: 35m
           memory: 64M
 
     dashboard:
@@ -32,6 +33,7 @@ spec:
           cpu: 15m
           memory: 64M
         limits:
+          cpu: 15m
           memory: 64M
 
       ingress:
