--- a/cluster/apps/auth-system/authentik/helm-release.yaml
+++ b/cluster/apps/auth-system/authentik/helm-release.yaml
@@ -15,7 +15,12 @@ spec:
         kind: HelmRepository
         name: authentik-charts
         namespace: flux-system
-      interval: 5m
+  install:
+    remediation:
+      retries: 3
+  upgrade:
+    remediation:
+      retries: 3
   valuesFrom:
     - kind: Secret
       name: authentik-secrets
