--- a/.github/workflows/schedule-cloudflare-proxied-networks-update.yaml
+++ b/.github/workflows/schedule-cloudflare-proxied-networks-update.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests
+          pip install requests pyyaml
       - name: Generate Token
         uses: tibdex/github-app-token@v1
         id: generate-token
