--- a/cluster/apps/media/recyclarr/cron-job.yaml
+++ b/cluster/apps/media/recyclarr/cron-job.yaml
@@ -2,10 +2,10 @@
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: trash-updater
+  name: &app recyclarr
   namespace: media
   labels:
-    app: trash-updater
+    app: *app
 spec:
   schedule: "0 3 * * *"
   concurrencyPolicy: Forbid
@@ -16,24 +16,16 @@ spec:
           automountServiceAccountToken: false
 
           initContainers:
-            - name: render-config
-              image: ghcr.io/k8s-at-home/trash-updater:v1.8.2
-              env:
-                - name: RADARR_API_KEY
-                  valueFrom:
-                    secretKeyRef:
-                      name: trash-updater-secrets
-                      key: radarrApiKey
-                - name: SONARR_API_KEY
-                  valueFrom:
-                    secretKeyRef:
-                      name: trash-updater-secrets
-                      key: sonarrApiKey
+            - name: render-configs
+              image: ghcr.io/k8s-at-home/recyclarr:v2.0.0
+              envFrom:
+                - secretRef:
+                    name: recyclarr-secrets
               command:
                 - "/bin/bash"
                 - -c
               args:
-                - "envsubst < /config/trash.yaml > /shared/trash.yaml"
+                - "envsubst < /config/recyclarr.yaml > /shared/recyclarr.yaml"
               volumeMounts:
                 - name: config
                   mountPath: /config
@@ -41,38 +33,44 @@ spec:
                   mountPath: /shared
 
           containers:
-            - name: trash-updater-sonarr
-              image: ghcr.io/k8s-at-home/trash-updater:v1.8.2
+            - name: sonarr
+              image: ghcr.io/k8s-at-home/recyclarr:v2.0.0
               imagePullPolicy: IfNotPresent
               env:
                 - name: TZ
                   value: "${TIMEZONE}"
+                - name: XDG_CONFIG_HOME
+                  value: /config
               command:
-                - /app/trash
+                - /app/recyclarr
               args:
                 - sonarr
                 - --config
-                - /config/trash.yaml
+                - /config/recyclarr.yaml
               volumeMounts:
                 - name: shared
-                  mountPath: /config
+                  mountPath: /config/recyclarr.yaml
+                  subPath: recyclarr.yaml
                   readOnly: true
 
-            - name: trash-updater-radarr
-              image: ghcr.io/k8s-at-home/trash-updater:v1.8.2
+            - name: radarr
+              image: ghcr.io/k8s-at-home/recyclarr:v2.0.0
               imagePullPolicy: IfNotPresent
               env:
                 - name: TZ
                   value: "${TIMEZONE}"
+                - name: XDG_CONFIG_HOME
+                  value: /config
               command:
-                - /app/trash
+                - /app/recyclarr
               args:
                 - radarr
                 - --config
-                - /config/trash.yaml
+                - /config/recyclarr.yaml
               volumeMounts:
                 - name: shared
-                  mountPath: /config
+                  mountPath: /config/recyclarr.yaml
+                  subPath: recyclarr.yaml
                   readOnly: true
 
           restartPolicy: OnFailure
@@ -80,6 +78,6 @@ spec:
           volumes:
             - name: config
               configMap:
-                name: trash-updater-config
+                name: recyclarr-config
             - name: shared
               emptyDir: {}
