--- a/cluster/apps/media/recyclarr/kustomization.yaml
+++ b/cluster/apps/media/recyclarr/kustomization.yaml
@@ -5,9 +5,9 @@ resources:
   - secret.sops.yaml
   - cron-job.yaml
 configMapGenerator:
-  - name: trash-updater-config
+  - name: recyclarr-config
     files:
-      - trash.yaml
+      - recyclarr.yaml
 generatorOptions:
   disableNameSuffixHash: true
   annotations:
