[Baikal] skip authentik

--- a/cluster/apps/home/baikal/helm-release.yaml
+++ b/cluster/apps/home/baikal/helm-release.yaml
@@ -55,7 +55,7 @@ spec:
           external-dns.alpha.kubernetes.io/target: ipv4.${CLUSTER_DOMAIN}
           external-dns/is-public: "true"
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
-          traefik.ingress.kubernetes.io/router.middlewares: networking-external-auth@kubernetescrd
+          traefik.ingress.kubernetes.io/router.middlewares: networking-external@kubernetescrd
         hosts:
           - host: &host "cal.${CLUSTER_DOMAIN}"
             paths:
@@ -65,19 +65,19 @@ spec:
           - secretName: "{{ .Release.Name }}-tls"
             hosts:
               - *host
-      caldav:
-        enabled: true
-        annotations:
-          cert-manager.io/cluster-issuer: letsencrypt-production
-          kubernetes.io/ingress.class: traefik
-          traefik.ingress.kubernetes.io/router.entrypoints: websecure
-          traefik.ingress.kubernetes.io/router.middlewares: networking-external@kubernetescrd
-        hosts:
-          - host: *host
-            paths:
-              - path: /dav.php/
-                pathType: Prefix
-        tls:
-          - secretName: "{{ .Release.Name }}-tls"
-            hosts:
-              - *host
+      # caldav:
+      #   enabled: true
+      #   annotations:
+      #     cert-manager.io/cluster-issuer: letsencrypt-production
+      #     kubernetes.io/ingress.class: traefik
+      #     traefik.ingress.kubernetes.io/router.entrypoints: websecure
+      #     traefik.ingress.kubernetes.io/router.middlewares: networking-external@kubernetescrd
+      #   hosts:
+      #     - host: *host
+      #       paths:
+      #         - path: /dav.php/
+      #           pathType: Prefix
+      #   tls:
+      #     - secretName: "{{ .Release.Name }}-tls"
+      #       hosts:
+      #         - *host
