--- a/cluster/apps/home/baikal/helm-release.yaml
+++ b/cluster/apps/home/baikal/helm-release.yaml
@@ -55,7 +55,7 @@ spec:
           external-dns.alpha.kubernetes.io/target: ipv4.${CLUSTER_DOMAIN}
           external-dns/is-public: "true"
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
-          traefik.ingress.kubernetes.io/router.middlewares: networking-external@kubernetescrd
+          # traefik.ingress.kubernetes.io/router.middlewares: networking-external@kubernetescrd
         hosts:
           - host: &host "cal.${CLUSTER_DOMAIN}"
             paths:
