--- a/cluster/apps/networking/traefik/addons/middleware/external-no-error-pages.yaml
+++ b/cluster/apps/networking/traefik/addons/middleware/external-no-error-pages.yaml
@@ -2,10 +2,10 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
-  name: no-auth
+  name: external-no-error-pages
   namespace: networking
 spec:
   chain:
     middlewares:
-      - name: secure-headers
-      - name: rate-limit
+      - name: cloudflare-only
+      - name: no-auth
