--- a/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -122,6 +122,10 @@ spec:
         flux-control-plane:
           url: https://raw.githubusercontent.com/fluxcd/flux2/main/manifests/monitoring/grafana/dashboards/control-plane.json
           datasource: Prometheus
+        synology-nas-details:
+          gnetId: 14284
+          revision: 9
+          datasource: Prometheus
     sidecar:
       datasources:
         enabled: true
