--- a/cluster/apps/home/appdaemon/helm-release.yaml
+++ b/cluster/apps/home/appdaemon/helm-release.yaml
@@ -66,6 +66,8 @@ spec:
           repository: codercom/code-server
           tag: 4.4.0
         workingDir: /config
+        git:
+          deployKeySecret: appdaemon-deploykey
         args:
           - --auth
           - "none"
