[Loki] move pvc to separate file for easier management

--- a/cluster/apps/monitoring/loki/helm-release.yaml
+++ b/cluster/apps/monitoring/loki/helm-release.yaml
@@ -22,10 +22,7 @@ spec:
       enabled: true
     persistence:
       enabled: true
-      accessModes:
-        - ReadWriteOnce
-      size: 20Gi
-      storageClassName: longhorn
+      existingClaim: loki-pv-claim
     config:
       limits_config:
         enforce_metric_name: false
