--- a/cluster/apps/monitoring/loki/kustomization.yaml
+++ b/cluster/apps/monitoring/loki/kustomization.yaml
@@ -4,4 +4,5 @@ kind: Kustomization
 resources:
   - datasource.yaml
   - helm-release.yaml
+  - persistent-volume-claim.yaml
   - prometheus-rule.yaml
