--- a/cluster/base/flux-system/gotk-sync.yaml
+++ b/cluster/base/flux-system/gotk-sync.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 10m0s
   ref:
     branch: main
-  url: https://github.com/mchestr/cluster-k3s
+  url: https://github.com/mchestr/home-cluster
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
