[Homer] Add k8s dashboard link to toolbar

--- a/cluster/apps/home/homer/pages/config.yaml
+++ b/cluster/apps/home/homer/pages/config.yaml
@@ -47,6 +47,9 @@ links:
   - name: Useful Links
     icon: fas fa-external-link-alt
     url: "#links"
+  - name: k8s Dashboard
+    icon: fas fa-external-link-alt
+    url: "https://dashboard.${CLUSTER_DOMAIN}"
 
 # Services
 # First level array represent a group.
