--- a/cluster/apps/auth-system/authentik/helm-release.yaml
+++ b/cluster/apps/auth-system/authentik/helm-release.yaml
@@ -21,6 +21,11 @@ spec:
   upgrade:
     remediation:
       retries: 3
+  dependsOn:
+    - name: postgres
+      namespace: database-system
+    - name: redis
+      namespace: database-system
   valuesFrom:
     - kind: Secret
       name: authentik-secrets
