[Ansible] add 4th node :D

--- a/provision/ansible/inventory/hosts.yml
+++ b/provision/ansible/inventory/hosts.yml
@@ -11,3 +11,5 @@ kubernetes:
           ansible_host: 192.168.1.201
         k8s-2:
           ansible_host: 192.168.1.202
+        k8s-3:
+          ansible_host: 192.168.1.203
