[Minio] fix pv sc

--- a/cluster/apps/database-system/minio/persistent-volume.yaml
+++ b/cluster/apps/database-system/minio/persistent-volume.yaml
@@ -8,7 +8,7 @@ spec:
     storage: 1Mi
   accessModes:
     - ReadWriteMany
-  storageClassName: minio-nfs
+  storageClassName: nfs-csi
   persistentVolumeReclaimPolicy: Retain
   nfs:
     server: ${NAS_ADDR}
