--- a/cluster/apps/database-system/minio/secret.sops.yaml
+++ b/cluster/apps/database-system/minio/secret.sops.yaml
@@ -1,11 +1,13 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: minio-creds
+    name: minio-secrets
     namespace: database-system
 stringData:
     root-user: ENC[AES256_GCM,data:Br+riew=,iv:4VuOwyYbtZkI/alv0yZVbD4MrYTUDFY0YnJ5jaHquNg=,tag:qItZsl6yGZDHAd7VW6v8dw==,type:str]
     root-password: ENC[AES256_GCM,data:rz3uOisgQEA70wvycKffy5M3qk5HRNzJlJCP0XCKC4tGmQwKV9d6tG75YpKz5DwVCQ==,iv:zjuiBSItDoXFGdqhqAPBUevaRsdw8/m0pMMg5LIMAq8=,tag:AdrUSZl1C0PGJCiSzvnXLg==,type:str]
+    MINIO_ROOT_USER: ENC[AES256_GCM,data:WhfHS7g=,iv:n69q9y8rLdP1VIAujj+Occ0cnmywiIg49pEmCZ/4aq0=,tag:wDJxUw2cehtjOzhhUSYqdQ==,type:str]
+    MINIO_ROOT_PASSWORD: ENC[AES256_GCM,data:Y33bTKh8ZqwgE6YJbKAGgJkIQHk7pxZBAKMsFQ8aBIy3B4xuaUZZxX/WvjXKvkLo6g==,iv:m5teVokLMSpgpfubdVzEwnASCPHsvzt/qBII22ns2Es=,tag:fkp2rWuyFoX4vLpQUbMokw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +23,8 @@ sops:
             L0JrZnNNQzVBMk1OVEE3dXA5MzhWaXcKgmRTNFXgJXwwxv0XYhI7V6H7pnZ/VcYr
             +q0L4vEBWVe0JIrnEUAzdC2yqzqODGnmBy/9YHjVw161Q3pm4mEUtA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-25T04:26:30Z"
-    mac: ENC[AES256_GCM,data:0lzFAl3lSfQBKyEg+Jcy7KRwkzb1Zj1tnreuf3MN1yLj59HSqaK/+BEu3zOmXxzA7aw13u2E7kSeUi2IY3O7BM1T4OIyTLI+wiPNjPZoJbsFcoboahiGML650kdiWgfcjuP91VipcbTfJ44g395b5j0yDluFrxtOpV5Bm9V3RYQ=,iv:saXrxP94EfvUSU+G+Ht1PWvZ/eFt3IQYPEEtdOc7v60=,tag:GauCg/gWHpBgAqeIzqYz6g==,type:str]
+    lastmodified: "2022-05-25T05:12:54Z"
+    mac: ENC[AES256_GCM,data:4xX1zregKRwUfIVFTXJBwfEt01NFLQ1fBcJVlvHJ5wEqHt02bgkHawap4pHT661Kv0AtGtUXuf2+3hNosG47RDbRBzFW7KZVu30H3fkzAvPJ8QzWHkRtNsrytx2ILub0+vlUD/GDVvCHxIi0FAXMg44W+QBTPVvnYz62lZ+hG1I=,iv:i5FE+6E11SQiTQmdfbhhk1LKsmSBtP8hUG+gtWvjGfw=,tag:hdaGHO+sP4IAADz8ROLHkA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.2
