--- a/cluster/apps/monitoring/thanos/helm-release.yaml
+++ b/cluster/apps/monitoring/thanos/helm-release.yaml
@@ -37,13 +37,17 @@ spec:
         sidecarsNamespace: monitoring
       ingress:
         enabled: true
-        hostname: thanos.${CLUSTER_DOMAIN}
+        hostname: &host thanos.${CLUSTER_DOMAIN}
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-production
           kubernetes.io/ingress.class: traefik
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
           # TODO Add Auth
-          traefik.ingress.kubernetes.io/router.middlewares: networking-internal@kubernetescrd
+          traefik.ingress.kubernetes.io/router.middlewares: networking-internal-auth@kubernetescrd
+        tls: true
+        extraTls:
+          - hosts:
+              - *host
     queryFrontend:
       enabled: false
     bucketweb:
